create profile folder

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -3,7 +3,7 @@
   imagefolder: /assets/images/portraits
   images:
   - filename: 1.jpeg
-    name: Marty McBooBoo
+    name: andrenne
     occupation: Superhero
     factCategory: Favorite Ice Cream
     factFact: Pikachu
