profile template, profile page can go into yml for profiles

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -3,7 +3,7 @@
   imagefolder: /assets/images/portraits
   images:
   - filename: 1.jpeg
-    name: andrenne
+    name: Andrenne
     occupation: Superhero
     factCategory: Favorite Ice Cream
     factFact: Pikachu
