layouts are properly setup for profiles

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -1,76 +1,75 @@
 - id: profiles
-  description: portraits
   imagefolder: /assets/images/portraits
-  images:
+  people:
   - filename: 1.jpeg
-    name: Andrenne
+    name: Andrenne Doe
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 2.jpeg
-    name: Marty McBooBoo
+    name: Ben Yu
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 3.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 4.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 5.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 6.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 7.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 8.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 9.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 10.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 11.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
   - filename: 12.jpeg
     name: Marty McBooBoo
     occupation: Superhero
-    factCategory: Favorite Ice Cream
+    factCategory: Ice Cream
     factFact: Pikachu
     bgColor: yellow
