include youtube playlist link on profile page

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -2,7 +2,7 @@
   imagefolder: /assets/images/portraits
   people:
   - filename: andrenne.jpeg
-    name: Andrenne Doe
+    name: Andrenne Akanke
     occupation: Visual Artist/Model
     factCategory: Ice Cream
     factFact: Pikachu
