split name into first and last, kept name so profiles load properly

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -3,72 +3,86 @@
   people:
   - filename: andrenne.jpeg
     name: Andrenne Akanke
+    firstName: Andrenne
+    lastName: Akanke
     occupation: Visual Artist/Model
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: https://www.youtube.com/watch?v=-CPCs7vVz6s&list=PLqLfWv6bj-W0BmRpwnoaUhMlTEp78iGQE
   - filename: tylerpalef-4.jpg
     name: Tyler Palef
+    firstName: Tyler
+    lastName: Palef
     occupation: Father/Web Developer
     factCategory: Hockey Player
     factFact: James Reimer
     playlistLink: yellow
   - filename: 3.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 4.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 5.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 6.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 7.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 8.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 9.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 10.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 11.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
     playlistLink: yellow
   - filename: 12.jpeg
-    name: Marty McBooBoo
+    firstName: Marty
+    lastName: McBooBoo
     occupation: Superhero
     factCategory: Ice Cream
     factFact: Pikachu
