styling for quotes, edited tylers profile, and a lot more oops

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -17,6 +17,7 @@
     factCategory: Hockey Player
     factFact: James Reimer
     playlistLink: yellow
+    quote1:
   - filename: 3.jpeg
     firstName: Marty
     lastName: McBooBoo
