configured to deploy to s3

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -16,7 +16,7 @@
     occupation: Father/Web Developer
     factCategory: Hockey Player
     factFact: James Reimer
-    playlistLink: yellow
+    playlistLink: https://www.youtube.com/watch?v=Y5fBdpreJiU&list=PLqLfWv6bj-W1xk3SvM4ACCnHXgH5AxM0A
     quote1:
   - filename: 3.jpeg
     firstName: Marty
