added daniel monizs profile

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -19,11 +19,11 @@
     playlistLink: https://www.youtube.com/watch?v=Y5fBdpreJiU&list=PLqLfWv6bj-W1xk3SvM4ACCnHXgH5AxM0A
     quote1:
   - filename: 3.jpeg
-    firstName: Marty
-    lastName: McBooBoo
-    occupation: Superhero
-    factCategory: Ice Cream
-    factFact: Pikachu
+    firstName: Daniel
+    lastName: Moniz
+    occupation: Software Engineer/Improv Artist
+    factCategory: winner of the Space Race
+    factFact: USSR
     playlistLink: yellow
   - filename: 4.jpeg
     firstName: Marty
