updated portrait for daniel

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -18,9 +18,10 @@
     factFact: James Reimer
     playlistLink: https://www.youtube.com/watch?v=Y5fBdpreJiU&list=PLqLfWv6bj-W1xk3SvM4ACCnHXgH5AxM0A
     quote1:
-  - filename: 3.jpeg
+  - filename: danielmoniz.jpg
     firstName: Daniel
     lastName: Moniz
+    name: Daniel Moniz
     occupation: Software Engineer/Improv Artist
     factCategory: winner of the Space Race
     factFact: USSR
