anchors change color when hovered

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -24,4 +24,4 @@
     occupation: Software Engineer | Instructor | Improv Artist
     factCategory: Winner of the Space Race
     factFact: USSR
-    playlistLink: yellow
+    playlistLink: https://www.youtube.com/watch?v=_FrOQC-zEog&list=PLqLfWv6bj-W39fQOfLrhm2PYiSAp8Z1rU
