add andrenne portraits

--- a/_data/inmyshoes.yml
+++ b/_data/inmyshoes.yml
@@ -1,7 +1,7 @@
 - id: profiles
   imagefolder: /assets/images/portraits
   people:
-  - filename: andrenne.jpeg
+  - filename: andrenneakanke-7-2.jpg
     name: Andrenne Akanke
     firstName: Andrenne
     lastName: Akanke
